--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>rampup_data</module>
         <module>rampup_common</module>
         <module>rampup_admin</module>
+        <module>rampup_auth</module>
     </modules>
 
     <dependencies>
@@ -35,6 +36,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
         <dependency>
